zoo-friend-skd add xinghuo