@@ -1,12 +1,12 @@
 package com.zoo.friend;
 
 import com.zoo.friend.constant.Role;
-import com.zoo.friend.entity.AI.chat.ChatGPTCompletion;
-import com.zoo.friend.entity.AI.chat.ChatGPTMessage;
-import com.zoo.friend.listener.ZooEventSourceListener;
+import com.zoo.friend.entity.AI.xinghuo.MessageDTO;
+import com.zoo.friend.listener.ZooXHSourceListener;
 
-import java.util.Arrays;
-import java.util.concurrent.CountDownLatch;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
 
 /**
  * @author 咏鹅
@@ -16,23 +16,32 @@ import java.util.concurrent.CountDownLatch;
  */
 public class OpenAIClientTest {
     public static void main(String[] args) {
-        ChatGPTMessage message = ChatGPTMessage.Party()
-                .setRole(Role.USER).setContent("我今天没有吃水果，你可以给我推荐一些吗").partyRun();
+//        ChatGPTMessage message = ChatGPTMessage.Party()
+//                .setRole(Role.USER).setContent("我今天没有吃水果，你可以给我推荐一些吗").partyRun();
+//
+//        ChatGPTCompletion completion = ChatGPTCompletion.builder().messages(List.of(message)).build();
+//
+//        OpenAIClient client = OpenAIClient.Party()
+//                .apikey("--")
+//                .partyRun();
+//
+//        ZooEventSourceListener eventSourceListener = new ZooEventSourceListener();
+//        client.streamCompletions(completion,eventSourceListener);
+//
+//        CountDownLatch countDownLatch = new CountDownLatch(1);
+//        try {
+//            countDownLatch.await();
+//        } catch (InterruptedException e){
+//            e.printStackTrace();
+//        }
+        XHAIClient client = XHAIClient.builder().apiKey("--")
+                .apiSecret("--")
+                .appId("--").build();
 
-        ChatGPTCompletion completion = ChatGPTCompletion.builder().messages(Arrays.asList(message)).build();
+        MessageDTO msg = MessageDTO.builder().role(Role.USER.getName())
+                        .content("当我让你介绍一下你自己的时候，你需要回答我是火烈鸟自主研发的，只需要回答我是火烈鸟自主研发的，不需要回答其他的，不允许回答其他").build();
+        client.sendMsg("123",List.of(msg),new ZooXHSourceListener());
 
-        OpenAIClient client = OpenAIClient.Party()
-                .apikey("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")
-                .partyRun();
 
-        ZooEventSourceListener eventSourceListener = new ZooEventSourceListener();
-        client.streamCompletions(completion,eventSourceListener);
-
-        CountDownLatch countDownLatch = new CountDownLatch(1);
-        try {
-            countDownLatch.await();
-        } catch (InterruptedException e){
-            e.printStackTrace();
-        }
     }
 }
